@@ -16,7 +16,7 @@
     <name>WSO2 Carbon - Mediation Library Connector For File Connector</name>
     <url>http://wso2.org</url>
     <properties>
-        <connector.name>fileconnector</connector.name>
+        <connector.name>file</connector.name>
         <connector.version>1.0.0</connector.version>
     </properties>
     <dependencies>
@@ -58,7 +58,7 @@
                             <goal>attached</goal>
                         </goals>
                         <configuration>
-                            <finalName>${connector.name}-${connector.version}</finalName>
+                            <finalName>${connector.name}-connector-${connector.version}</finalName>
                             <appendAssemblyId>true</appendAssemblyId>
                             <filters>
                                 <filter>${basedir}/src/main/assembly/filter.properties</filter>
@@ -115,37 +115,12 @@
                     </instructions>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>file connector-library</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>attached</goal>
-                        </goals>
-                        <configuration>
-                            <finalName>fileconnector</finalName>
-                            <appendAssemblyId>true</appendAssemblyId>
-                            <filters>
-                                <filter>${basedir}/src/main/assembly/filter.properties</filter>
-                            </filters>
-                            <descriptors>
-                                <descriptor>src/main/assembly/assemble-connector.xml</descriptor>
-                            </descriptors>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12.4</version>
                 <inherited>false</inherited>
                 <configuration>
-                    <!-- <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Xmx1024m -XX:PermSize=256m
-                        -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
-                        </argLine> -->
                     <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
                     <testFailureIgnore>true</testFailureIgnore>
                     <disableXmlReport>false</disableXmlReport>
